--- a/DeadTree/Views/Shared/_Layout.cshtml
+++ b/DeadTree/Views/Shared/_Layout.cshtml
@@ -30,7 +30,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a asp-area="" asp-controller="ComponentModels" asp-action="Index">Component</a></li>
                     <li><a asp-area="" asp-controller="ProfessorModels" asp-action="Index">Professor</a></li>
+                    <li><a asp-area="" asp-controller="FaultFeaturesModels" asp-action="Index">FaultFeatures</a></li>
+                    <li><a asp-area="" asp-controller="FaultNameModels" asp-action="Index">FaultName</a></li>
+                    <li><a asp-area="" asp-controller="FaultMappingModels" asp-action="Index">FaultMapping</a></li>
+                    <li><a asp-area="" asp-controller="ApparatusModels" asp-action="Index">Apparatus</a></li>
                 </ul>
             </div>
         </div>
