--- a/DeadTree/Views/Shared/_Layout.cshtml
+++ b/DeadTree/Views/Shared/_Layout.cshtml
@@ -36,6 +36,13 @@
                     <li><a asp-area="" asp-controller="FaultNameModels" asp-action="Index">FaultName</a></li>
                     <li><a asp-area="" asp-controller="FaultMappingModels" asp-action="Index">FaultMapping</a></li>
                     <li><a asp-area="" asp-controller="ApparatusModels" asp-action="Index">Apparatus</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">订单管理 <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a asp-area="" asp-controller="BorrowModels" asp-action="Index">提货订单管理</a></li>
+                            <li><a asp-area="" asp-controller="PaybackModels" asp-action="Index">回收订单管理</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
