--- a/DeadTree/Views/Shared/_Layout.cshtml
+++ b/DeadTree/Views/Shared/_Layout.cshtml
@@ -38,13 +38,13 @@
                         <ul class="dropdown-menu">
                             <li><a asp-area="" asp-controller="FaultNameModels" asp-action="Index">故障名称管理</a></li>
                             <li><a asp-area="" asp-controller="FaultFeaturesModels" asp-action="Index">故障特征管理</a></li>
-                            <li><a asp-area="" asp-controller="FaultResultModels" asp-action="Index">故障原因管理</a></li>
+                            <li><a asp-area="" asp-controller="FaultResultsModels" asp-action="Index">故障原因管理</a></li>
                         </ul>
                     </li>                    
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">调查问卷 <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a asp-area="" asp-controller="QuestionModels" asp-action="Index">问题管理</a></li>
+                            <li><a asp-area="" asp-controller="QuestionsModels" asp-action="Index">问题管理</a></li>
                             <li><a asp-area="" asp-controller="FeaturesMappingModels" asp-action="Index">故障特征映射</a></li>
                             <li><a asp-area="" asp-controller="ResultsMappingModels" asp-action="Index">故障原因映射</a></li>
                         </ul>
