--- a/DeadTree/Views/FaultNameModels/Index.cshtml
+++ b/DeadTree/Views/FaultNameModels/Index.cshtml
@@ -25,6 +25,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
+                <a asp-action="Fill" asp-controller="Home" asp-route-id="@item.FNId">填写问卷</a> |
                 <a asp-action="Edit" asp-route-id="@item.FNId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.FNId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.FNId">Delete</a>
