--- a/DeadTree/Views/Home/Fill.cshtml
+++ b/DeadTree/Views/Home/Fill.cshtml
@@ -1,13 +1,14 @@
 ﻿@model DeadTree.Models.DBClass.QuestionsModel
 
 @{
-    ViewData["Title"] = "Fill";
+    ViewData["Title"] = "请问\"" + Model.FaultName.Name + "\"的特征是什么？";
 }
 
-<h2>Fill</h2>
-
-<h4>QuestionsModel</h4>
-<hr />
+<div class="jumbotron" style="background-color:deepskyblue">
+    <h2 style="color:white">
+        @ViewBag.Title
+    </h2>
+</div>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Fill">
@@ -15,17 +16,104 @@
             <input type="hidden" asp-for="QId" />
             <input type="hidden" asp-for="PId" />
             <input type="hidden" asp-for="FNId" />
-            <div class="form-group">
-                <label asp-for="Answer" class="control-label"></label>
-                <input asp-for="Answer" class="form-control" />
-                <span asp-validation-for="Answer" class="text-danger"></span>
+            <div>
+                <!-- Nav tabs -->
+                <ul class="nav nav-tabs" role="tablist">
+                    <li role="presentation" class="active"><a href="#inve" aria-controls="inve" role="tab" data-toggle="tab">故障表征</a></li>
+                    <li role="presentation"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">故障原因</a></li>
+                    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">应对方案</a></li>
+                </ul>
+                <div class="tab-content">
+
+                    <div role="tabpanel" class="tab-pane fade in active" id="inve">
+                        <table class="table table-condensed">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        特征项
+                                    </th>
+                                    <th>
+                                        相关元件
+                                    </th>
+                                    <th>
+                                        描述
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    @foreach (var item in Model.FeaturesMappings)
+                                    {
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.FaultFeatures.Name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Component.Name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Description)
+                                        </td>
+                                    }
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div role="tabpanel" class="tab-pane fade" id="home">
+                        <table class="table table-condensed">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        原因项
+                                    </th>
+                                    <th>
+                                        相关元件
+                                    </th>
+                                    <th>
+                                        概率
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    @foreach (var item in Model.ResultsMappings)
+                                    {
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.FaultResults.Result)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Component.Name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Probability)
+                                        </td>
+                                    }
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div role="tabpanel" class="tab-pane fade" id="profile">
+                        <div class="form-group">
+                            <label asp-for="Answer" class="control-label"></label>
+                            <textarea asp-for="Answer" class="form-control" rows="3"></textarea>
+                            <span asp-validation-for="Answer" class="text-danger"></span>
+                        </div>
+
+                        <div class="form-group">
+                            <input type="submit" value="Save" class="btn btn-block btn-primary" />
+                        </div>
+                    </div>
+                </div>
+
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+
+
         </form>
     </div>
 </div>
+
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
