--- a/DeadTree/Views/QuestionsModels/Index.cshtml
+++ b/DeadTree/Views/QuestionsModels/Index.cshtml
@@ -12,9 +12,12 @@
 <table class="table">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Answer)
-                </th>
+            <th>
+                @Html.DisplayNameFor(model => model.QId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Answer)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.FaultName)
             </th>
@@ -25,23 +28,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Answer)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FaultName.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Professor.BankName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.QId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.QId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.QId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.QId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Answer)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FaultName.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Professor.Name)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.QId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.QId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.QId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
