--- a/DeadTree/Views/FeaturesMappingModels/Edit.cshtml
+++ b/DeadTree/Views/FeaturesMappingModels/Edit.cshtml
@@ -13,6 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="FMId" />
+            <input type="hidden" asp-for="QId" />
             <div class="form-group">
                 <label asp-for="FFId" class="control-label"></label>
                 <select asp-for="FFId" class="form-control" asp-items="ViewBag.FFId"></select>
@@ -27,11 +28,6 @@
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="QId" class="control-label"></label>
-                <select asp-for="QId" class="form-control" asp-items="ViewBag.QId"></select>
-                <span asp-validation-for="QId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
