--- a/DeadTree/Views/ResultsMappingModels/CreateInQuestion.cshtml
+++ b/DeadTree/Views/ResultsMappingModels/CreateInQuestion.cshtml
@@ -1,29 +1,26 @@
 ﻿@model DeadTree.Models.DBClass.ResultsMappingModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "CreateInQuestion";
 }
 
-<h2>Edit</h2>
+<h2>CreateInQuestion</h2>
 
 <h4>ResultsMappingModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="CreateInQuestion">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="RMId" />
             <input type="hidden" asp-for="QId" />
 
             <div class="form-group">
                 <label asp-for="FRId" class="control-label"></label>
                 <select asp-for="FRId" class="form-control" asp-items="ViewBag.FRId"></select>
-                <span asp-validation-for="FRId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CId" class="control-label"></label>
                 <select asp-for="CId" class="form-control" asp-items="ViewBag.CId"></select>
-                <span asp-validation-for="CId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Probability" class="control-label"></label>
@@ -31,7 +28,7 @@
                 <span asp-validation-for="Probability" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
