--- a/DeadTree/Views/QuestionsModels/Edit.cshtml
+++ b/DeadTree/Views/QuestionsModels/Edit.cshtml
@@ -88,6 +88,10 @@
                                             @line.Component.Name - @line.Description
                                         </hit>
                                     }
+
+                                    <hit hidden="hidden" name="FeaturesComponentNumber">
+                                        @item.Count()
+                                    </hit>
                                 }
 
                             </tbody>
@@ -175,6 +179,7 @@
 
     mynodes.push({ name: d3.select("FaultName").text().trim() });
     mynodes.push({ name: "OR" });
+    mynodes.push({ name: "OR" });
 
     var FeaturesNameArray = document.getElementsByName("FeaturesName");
 
@@ -189,16 +194,31 @@
         mynodes.push({ name: v.innerText.trim() });
     });
 
-    console.log(mynodes);
+    var FeaturesComponentNumberArray = new Array();
 
+    document.getElementsByName("FeaturesComponentNumber").forEach(v => {
+        FeaturesComponentNumberArray.push(parseInt(v.innerText.trim()));
+    });
 
-    var myedges = [{ source: 0, target: 1 },
-    { source: 1, target: 2 }, { source: 2, target: 3 },
-    { source: 3, target: 4 }, { source: 3, target: 5 }, { source: 3, target: 6 }, { source: 3, target: 7 },
-    { source: 1, target: 8 }, { source: 8, target: 9 },
-    { source: 9, target: 10 },
-    { source: 1, target: 11 }, { source: 11, target: 12 },
-    { source: 12, target: 13 }];
+    //------------------------------------------------//
+
+    var myedges = new Array();
+
+    myedges.push({ source: 0, target: 1 });
+    myedges.push({ source: 0, target: 2 });
+
+    var counter = 1 + 2 + FeaturesNameArray.length * 2;
+
+    //3-1 5-1 7-1
+
+    for (var i = 0; i < FeaturesNameArray.length; i++) {
+        myedges.push({ source: 3 + i * 2, target: 1 });
+        myedges.push({ source: 4 + i * 2, target: 3 + i * 2 });
+
+        for (var j = 0; j < FeaturesComponentNumberArray[i]; j++) {
+            myedges.push({ source: counter++, target: 4 + i * 2, });
+        }
+    }
 
     console.log(myedges);
 </script>
