--- a/DeadTree/Views/QuestionsModels/Edit.cshtml
+++ b/DeadTree/Views/QuestionsModels/Edit.cshtml
@@ -226,7 +226,7 @@
 <div>
     <button class="btn btn-block btn-primary" onclick="startDrawing(mynodes, myedges)">绘制！</button>
 
-    <svg class="col-md-12">
+    <svg class="row">
 
     </svg>
 </div>
